--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,12 @@ body {
     align-items: center;
 }
 
-.hero-container-CAES {
+.hero-container-test {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
