mudando tamanho do botao e relacionando a ele o texto de cada alternativa

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,6 +472,11 @@ section {
     text-align: justify;
 }
 
+input[type="radio"] {
+    transform: scale(1.4);
+    margin-right: 8px;
+}
+
 /* Button */
 
 .button {
