--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,6 +535,11 @@ section {
     border-color: var(--azul-claro);
 }
 
+.options-caes input[type="radio"]:hover {
+    background-color: #0090C1;
+    transition: 0.8s ease;
+}
+
 .options-caes input[type="radio"]:checked {
     background-color: var(--azul-claro); 
 }
